--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -24,6 +24,21 @@ html{
     padding: 100px;
     overflow: hidden;
 }
+.bars{
+    display:inline-block;
+    border: 2px solid rgba(0, 0, 0, .2);
+    padding:2px 10px;
+    border-radius:5px;
+    cursor:pointer;
+}
+.bar{
+    display:block;
+    width:35px;
+    height:3px;
+    background:white;
+    margin:6px auto;
+    border-radius:3px;
+}
 .custom-shape-divider-bottom-1601042332 {
     position: absolute;
     bottom: 0;
