--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -24,6 +24,9 @@ html{
     padding: 100px;
     overflow: hidden;
 }
+.close{
+    display: none;
+}
 .bars{
     display:inline-block;
     border: 2px solid rgba(0, 0, 0, .2);
