--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -28,7 +28,7 @@ html{
     display: none;
 }
 .bars{
-    display:inline-block;
+    display:none;
     border: 2px solid rgba(0, 0, 0, .2);
     padding:2px 10px;
     border-radius:5px;
@@ -63,6 +63,7 @@ html{
 .custom-shape-divider-bottom-1601042332 .shape-fill {
     fill: #FFFFFF;
 }
+
 header{
     position: absolute;
     top:0;
