--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,24 +1,30 @@
 @media screen and (max-width:768px){
     header{
-        flex-direction: column;
         padding:0px;
     }
     .page-1,
     .page-2{
-        padding:10px;
+        padding:0px;
+        min-height:100vh;
     }
     .content{
-        top:1em;
-        margin:auto;
+        margin:10px auto;
+        position:static!important;
     }
-    .custom-shape-divider-bottom-1601042332{
-        display:none;
+    .page-1{
+        flex-direction:column;
     }
     .girl{
-        left:20%;
-        top:30%;
-        height:400px;
-        width:300px;
+        position:static;
+        width:200px;
+        height:auto;
+        display:block;
+        margin:2em auto;
+    }
+    .bars{
+        display:inline-block;
+    }
+    .custom-shape-divider-bottom-1601042332{
         display:none;
     }
     .content h2{
@@ -41,18 +47,17 @@
         background:#fff;
         width:100%;
         margin:auto;
-        right:0;
-        bottom:0;
         flex-direction:column;
         justify-content:center;
         padding:8px;
+        position: static;
     }
     header .nav-links{
         padding-top:60px;
         position: fixed;
         top: 0;
         background:#0099CB;
-        display:block;
+        display:none;
         left:0;
         height:100vh;
         z-index:10;
