--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -17,7 +17,8 @@
     }
     .girl{
         position:static;
-        width:200px;
+        width:400px;
+        height:300px;
         height:auto;
         display:block;
         margin:2em auto;
@@ -51,8 +52,16 @@
         margin:auto;
         flex-direction:column;
         justify-content:center;
-        padding:8px;
+        padding:6px 8px;
         position: static;
+    }
+    .social-tag{
+        font-size:1.2em;
+        font-weight:500;
+    }
+    .playstore{
+        margin:24px auto;
+        border-radius:16px;
     }
     header .nav-links{
         padding-top:60px;
